[project]
name = "gh-workflows"
dynamic = ["version"]
description = "Github workflows that can be shared across all HOT projects."
authors = [
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["hot", "hotosm", "gh-workflows", "workflows"]

[project.urls]
homepage = "https://hotosm.github.io/gh-workflows"
documentation = "https://hotosm.github.io/gh-workflows"
repository = "https://github.com/hotosm/gh-workflows"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.6",
    "mkdocs-exclude>=1.0.2",
    "mkdocstrings-python>=1.7.3",
    "mdx-truly-sane-lists>=1.3",
]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
