[project]
name = "gh-workflows"
version = "3.5.0"
description = "Github workflows that can be shared across all HOT projects."
authors = [
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["hot", "hotosm", "gh-workflows", "workflows"]
include = ["images"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://hotosm.github.io/gh-workflows"
documentation = "https://hotosm.github.io/gh-workflows"
repository = "https://github.com/hotosm/gh-workflows"

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.5.0"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.uv.workspace]
members = [
    "images/docs-builder",
]

[tool.uv]
package = false

[tool.setuptools]
packages = []
