[project]
name = "docs-builder"
version = "0.1.0"
description = "mkdocs plus dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mdx-truly-sane-lists",
    "mkdocs",
    "mkdocs-drawio",
    "mkdocs-exclude",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material",
    "mkdocstrings-python",
]
